--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "esbuild": "^0.23.0",
+    "lodash": "^4.17.21",
     "react": "^18.2",
     "react-dom": "^18.3.1",
+    "react-select": "^5.8.0",
     "typescript": "^5.5.4"
   },
   "scripts": {
     "build": "esbuild app/javascript/entrypoints/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.7"
   }
 }
