--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@hotwired/turbo-rails": "^8.0.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "esbuild": "^0.23.0",
@@ -9,6 +10,7 @@
     "react": "^18.2",
     "react-dom": "^18.3.1",
     "react-select": "^5.8.0",
+    "tailwindcss-tables": "^0.4.0",
     "typescript": "^5.5.4"
   },
   "scripts": {
