--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2",
     "react-dom": "^18.3.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss-tables": "^0.4.0",
     "typescript": "^5.5.4"
   },
@@ -17,7 +19,8 @@
     "build": "esbuild app/javascript/entrypoints/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.7"
+    "@types/lodash": "^4.17.7",
+    "@types/react-slick": "^0.23.13"
   },
   "packageManager": "yarn@1.22.22"
 }
