--- a/test/fixtures/adapters.yml
+++ b/test/fixtures/adapters.yml
@@ -1,1 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+maxicosi_infant_adapter: {}
+
+global_adapter: {}
