test: assert that import and export ends up in the same state

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -28,5 +28,5 @@ maxicosi infant adapter:
   name: infant adapter
   url: http://www.infantadapter.com/
   productable: maxicosi_infant_adapter (Adapter)
-  slug: maxicosi-infant-adapter
+  slug: infant-adapter
   tags: [ infant ]
