--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2",
     "react-dom": "^18.3.1",
     "react-select": "^5.8.0",
+    "react-select-async-paginate": "^0.7.6",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss-tables": "^0.4.0",
